Added several new features.

--- a/apps/office-dashboard/package.json
+++ b/apps/office-dashboard/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@club-ops/shared": "workspace:*",
+    "@zxing/library": "^0.21.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
