--- a/services/api/package.json
+++ b/services/api/package.json
@@ -24,12 +24,14 @@
     "@club-ops/shared": "workspace:*",
     "@fastify/cors": "^8.5.0",
     "@fastify/websocket": "^8.3.1",
+    "bcrypt": "^5.1.1",
     "fastify": "^4.25.0",
     "pg": "^8.11.3",
     "pino-pretty": "^10.3.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.10.0",
     "@types/pg": "^8.10.9",
     "@types/ws": "^8.5.10",
