Building Demo Mode

--- a/services/api/env.example
+++ b/services/api/env.example
@@ -28,4 +28,7 @@ WEBAUTHN_RP_ID=localhost
 # Debug Options
 DB_LOG_QUERIES=false
 
+# Demo Mode
+# Set to 'true' to enable demo data seeding (shifts, timeclock sessions, documents)
+DEMO_MODE=false
 
