--- a/apps/employee-register/package.json
+++ b/apps/employee-register/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview",
     "test": "pnpm exec vitest run",
     "test:watch": "pnpm exec vitest",
-    "lint": "pnpm exec eslint src --ext .ts,.tsx",
+    "lint": "npx eslint src",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@club-ops/shared": "workspace:*",
+    "@club-ops/ui": "workspace:*",
     "@zxing/library": "^0.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -22,11 +23,7 @@
     "@testing-library/react": "^14.1.2",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^23.0.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
