--- a/services/api/package.json
+++ b/services/api/package.json
@@ -10,7 +10,7 @@
     "start": "node dist/index.js",
     "test": "pnpm exec vitest run",
     "test:watch": "pnpm exec vitest",
-    "lint": "pnpm exec eslint src --ext .ts",
+    "lint": "npx eslint src",
     "typecheck": "tsc --noEmit",
     "db:start": "docker compose up -d",
     "db:stop": "docker compose down",
@@ -38,8 +38,6 @@
     "@types/node": "^20.10.0",
     "@types/pg": "^8.10.9",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
