--- a/apps/cleaning-station-kiosk/package.json
+++ b/apps/cleaning-station-kiosk/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 5174 --strictPort",
+    "dev": "vite --host 0.0.0.0 --port 5174 --strictPort",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "pnpm exec vitest run",
