--- a/apps/office-dashboard/package.json
+++ b/apps/office-dashboard/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 5176 --strictPort",
+    "dev": "vite --host 0.0.0.0 --port 5176 --strictPort",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "pnpm exec vitest run",
