--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "type": "module",
   "description": "Multi-application system for managing club check-ins, room inventory, cleaning workflows, and operational metrics",
   "scripts": {
-    "kill-ports": "node scripts/kill-ports.js",
+    "kill-ports": "node scripts/kill-ports.cjs",
     "dev": "pnpm kill-ports && concurrently -n api,kiosk,register,dashboard,cleaning,checkout -c blue,green,yellow,magenta,cyan,red \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\" \"pnpm --filter @club-ops/office-dashboard dev\" \"pnpm --filter @club-ops/cleaning-station-kiosk dev\" \"pnpm --filter @club-ops/checkout-kiosk dev\"",
     "dev:cloud": "concurrently -n api,kiosk,register,dashboard,cleaning,checkout -c blue,green,yellow,magenta,cyan,red \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\" \"pnpm --filter @club-ops/office-dashboard dev\" \"pnpm --filter @club-ops/cleaning-station-kiosk dev\" \"pnpm --filter @club-ops/checkout-kiosk dev\"",
     "dev-test": "pnpm kill-ports && concurrently -n api,kiosk,register -c blue,green,yellow \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\"",
     "build": "pnpm -r build",
     "test": "pnpm kill-ports && pnpm -r test",
     "lint": "pnpm -r lint",
-    "doctor": "node scripts/doctor.js",
+    "doctor": "node scripts/doctor.cjs",
     "typecheck": "pnpm -r typecheck",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
