chore(root): add deps prehooks and db proxy scripts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
   "description": "Multi-application system for managing club check-ins, room inventory, cleaning workflows, and operational metrics",
   "scripts": {
     "kill-ports": "node scripts/kill-ports.cjs",
+    "db:start": "pnpm --filter @club-ops/api db:start",
+    "db:stop": "pnpm --filter @club-ops/api db:stop",
+    "db:reset": "pnpm --filter @club-ops/api db:reset",
+    "db:migrate": "pnpm --filter @club-ops/api db:migrate",
+    "db:seed": "pnpm --filter @club-ops/api seed",
+    "build:deps": "pnpm --filter @club-ops/shared build && pnpm --filter @club-ops/ui build",
+    "predev": "pnpm build:deps",
+    "pretest": "pnpm build:deps",
+    "prebuild": "pnpm build:deps",
     "dev": "pnpm kill-ports && concurrently -n api,kiosk,register,dashboard,cleaning,checkout -c blue,green,yellow,magenta,cyan,red \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\" \"pnpm --filter @club-ops/office-dashboard dev\" \"pnpm --filter @club-ops/cleaning-station-kiosk dev\" \"pnpm --filter @club-ops/checkout-kiosk dev\"",
     "dev:cloud": "concurrently -n api,kiosk,register,dashboard,cleaning,checkout -c blue,green,yellow,magenta,cyan,red \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\" \"pnpm --filter @club-ops/office-dashboard dev\" \"pnpm --filter @club-ops/cleaning-station-kiosk dev\" \"pnpm --filter @club-ops/checkout-kiosk dev\"",
     "dev-test": "pnpm kill-ports && concurrently -n api,kiosk,register -c blue,green,yellow \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\"",
