--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
   },
   "packageManager": "pnpm@10.27.0",
   "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt",
+      "esbuild"
+    ],
     "peerDependencyRules": {
       "allowedVersions": {
         "eslint": "9"
