--- a/services/api/package.json
+++ b/services/api/package.json
@@ -12,13 +12,13 @@
     "test:watch": "pnpm exec vitest",
     "lint": "npx eslint src",
     "typecheck": "tsc --noEmit",
-    "db:start": "docker compose up -d",
-    "db:stop": "docker compose down",
+    "db:start": "node scripts/compose.mjs up -d",
+    "db:stop": "node scripts/compose.mjs down",
     "db:setup": "node --import tsx scripts/setup-db.ts || powershell -ExecutionPolicy Bypass -File scripts/setup-db.ps1",
     "db:migrate": "node --import tsx src/db/migrate.ts",
     "db:migrate:status": "node --import tsx src/db/migrate.ts status",
     "db:migrate:rollback": "node --import tsx src/db/migrate.ts rollback",
-    "db:reset": "docker compose down -v && docker compose up -d",
+    "db:reset": "node scripts/compose.mjs reset",
     "seed": "node --import tsx src/db/seed.ts",
     "update-staff": "node --import tsx scripts/update-staff-names.ts"
   },
