refactor(customer-kiosk): update check-in modes and improve state management
- Changed CheckinMode to use string literals ('INITIAL' | 'RENEWAL') instead of enum.
- Updated state variables for health and WebSocket connection to use underscore prefix.
- Removed unused 'locker' translation from i18n.
- Enhanced rental display name function to include customer primary language.
- Cleaned up unused code and improved type definitions in various components.

--- a/apps/employee-register/tsconfig.json
+++ b/apps/employee-register/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "jsx": "react-jsx",
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noEmit": true
   },
   "include": ["src"],
