--- a/services/api/package.json
+++ b/services/api/package.json
@@ -13,13 +13,14 @@
     "lint": "npx eslint src",
     "typecheck": "tsc --noEmit",
     "db:start": "node scripts/compose.mjs up -d",
+    "db:wait": "node --import tsx scripts/wait-for-db.ts",
     "db:stop": "node scripts/compose.mjs down",
     "db:setup": "node --import tsx scripts/setup-db.ts || powershell -ExecutionPolicy Bypass -File scripts/setup-db.ps1",
-    "db:migrate": "node --import tsx src/db/migrate.ts",
+    "db:migrate": "pnpm db:wait && node --import tsx src/db/migrate.ts",
     "db:migrate:status": "node --import tsx src/db/migrate.ts status",
     "db:migrate:rollback": "node --import tsx src/db/migrate.ts rollback",
     "db:reset": "node scripts/compose.mjs reset",
-    "seed": "node --import tsx src/db/seed.ts",
+    "seed": "pnpm db:wait && node --import tsx src/db/seed.ts",
     "update-staff": "node --import tsx scripts/update-staff-names.ts"
   },
   "dependencies": {
