--- a/services/api/package.json
+++ b/services/api/package.json
@@ -31,6 +31,7 @@
     "@zxing/library": "^0.21.0",
     "bcrypt": "^5.1.1",
     "fastify": "^4.25.0",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.11.3",
     "pino-pretty": "^10.3.0",
     "zod": "^3.22.4"
@@ -38,8 +39,10 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.10.0",
+    "@types/pdf-parse": "^1.1.4",
     "@types/pg": "^8.10.9",
     "@types/ws": "^8.5.10",
+    "pdf-parse": "^1.1.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
