feat(linting): relax TypeScript linting rules for demo applications
- Updated ESLint configuration to relax strict type-safety rules for the office dashboard and API services, allowing for more flexible development in demo environments.
- Added specific rules to disable unsafe assignment and member access checks, facilitating a smoother linting experience during smoke testing.
- Ensured core linting rules remain intact to maintain code quality while accommodating legacy/demo code.

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -8,7 +8,7 @@
     "dev": "node --import tsx --watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "pnpm exec vitest run",
+    "test": "pnpm db:migrate && pnpm exec vitest run",
     "test:watch": "pnpm exec vitest",
     "lint": "npx eslint src",
     "typecheck": "tsc --noEmit",
@@ -28,6 +28,7 @@
     "@fastify/cors": "^8.5.0",
     "@fastify/websocket": "^8.3.1",
     "@simplewebauthn/server": "^9.0.0",
+    "@simplewebauthn/types": "^9.0.0",
     "@zxing/library": "^0.21.0",
     "bcrypt": "^5.1.1",
     "fastify": "^4.25.0",
