feat(deepsource): update DeepSource configuration for multiple applications
- Added .deepsource.toml files for checkout-kiosk, cleaning-station-kiosk, customer-kiosk, employee-register, office-dashboard, shared, ui, and api applications to enable code analysis and formatting.
- Defined test patterns and exclusion rules to optimize code quality checks across all applications.
- Enabled Prettier for consistent code formatting in each application.

--- a/services/api/.deepsource.toml
+++ b/services/api/.deepsource.toml
@@ -13,7 +13,9 @@ exclude_patterns = [
   "**/build/**",
   "**/.next/**",
   "**/coverage/**",
-  "**/vendor/**"
+  "**/vendor/**",
+  "**/migrations/**",
+  "**/tests/_artifacts/**"
 ]
 
 [[analyzers]]
@@ -31,3 +33,4 @@ enabled = true
 [[transformers]]
 name = "prettier"
 enabled = true
+
