refactor(deepsource): streamline DeepSource configuration across applications
- Updated .deepsource.toml files for multiple applications to replace deprecated analyzer settings with a unified meta configuration for TypeScript.
- Changed transformer sections to code_formatters for Prettier, ensuring consistent code formatting across all applications.

--- a/services/api/.deepsource.toml
+++ b/services/api/.deepsource.toml
@@ -22,15 +22,13 @@ exclude_patterns = [
 name = "javascript"
 enabled = true
 
-[[analyzers]]
-name = "typescript"
-enabled = true
+  [analyzers.meta]
+  dialect = "typescript"
 
 [[analyzers]]
 name = "test-coverage"
 enabled = true
 
-[[transformers]]
+[[code_formatters]]
 name = "prettier"
 enabled = true
-
