refactor(deepsource): update DeepSource configuration for multiple applications
- Removed deprecated test_patterns and streamlined exclusion_patterns in .deepsource.toml files.
- Added environment and plugins settings for TypeScript analyzers to enhance compatibility with Node.js and React.
- Ensured consistent configuration across checkout-kiosk, cleaning-station-kiosk, customer-kiosk, employee-register, office-dashboard, shared, and ui applications.

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,19 +1,11 @@
 version = 1
 
-test_patterns = [
-  "**/*.test.*",
-  "**/*.spec.*",
-  "**/__tests__/**",
-  "**/tests/**"
-]
-
 exclude_patterns = [
   "**/node_modules/**",
   "**/dist/**",
   "**/build/**",
   "**/.next/**",
-  "**/coverage/**",
-  "**/vendor/**"
+  "**/coverage/**"
 ]
 
 [[analyzers]]
@@ -22,6 +14,8 @@ enabled = true
 
   [analyzers.meta]
   dialect = "typescript"
+  environment = ["nodejs", "browser"]
+  plugins = ["react"]
 
 [[analyzers]]
 name = "test-coverage"
