--- a/apps/customer-kiosk/.deepsource.toml
+++ b/apps/customer-kiosk/.deepsource.toml
@@ -1,19 +1,11 @@
 version = 1
 
-test_patterns = [
-  "**/*.test.*",
-  "**/*.spec.*",
-  "**/__tests__/**",
-  "**/tests/**"
-]
-
 exclude_patterns = [
   "**/node_modules/**",
   "**/dist/**",
   "**/build/**",
   "**/.next/**",
-  "**/coverage/**",
-  "**/vendor/**"
+  "**/coverage/**"
 ]
 
 [[analyzers]]
@@ -22,10 +14,8 @@ enabled = true
 
   [analyzers.meta]
   dialect = "typescript"
-
-[[analyzers]]
-name = "test-coverage"
-enabled = true
+  environment = ["nodejs", "browser"]
+  plugins = ["react"]
 
 [[code_formatters]]
 name = "prettier"
