refactor(deepsource): enhance DeepSource configuration for improved testing
- Added test_patterns to .deepsource.toml files to include various test file formats and directories.
- Simplified environment settings for TypeScript analyzers in the shared configuration by removing unnecessary plugins, focusing on Node.js compatibility.

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,5 +1,12 @@
 version = 1
 
+test_patterns = [
+  "**/*.test.*",
+  "**/*.spec.*",
+  "**/__tests__/**",
+  "**/tests/**"
+]
+
 exclude_patterns = [
   "**/node_modules/**",
   "**/dist/**",
