--- a/apps/customer-kiosk/package.json
+++ b/apps/customer-kiosk/package.json
@@ -22,8 +22,11 @@
     "@testing-library/react": "^14.1.2",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "autoprefixer": "^10.4.20",
     "@vitejs/plugin-react": "^4.2.1",
     "jsdom": "^23.0.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
     "vitest": "^1.1.0"
