--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "pretypecheck": "pnpm build:deps",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "spec:check": "node scripts/spec-compliance.mjs"
+    "spec:check": "node scripts/spec-compliance.mjs",
+    "demo:test": "DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts && pnpm --filter @club-ops/api exec vitest run tests/demo-seed.test.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
