--- a/services/api/package.json
+++ b/services/api/package.json
@@ -30,6 +30,7 @@
     "@simplewebauthn/server": "^9.0.0",
     "@simplewebauthn/types": "^9.0.0",
     "@zxing/library": "^0.21.0",
+    "aamva-parser": "^1.4.1",
     "bcrypt": "^5.1.1",
     "fastify": "^4.25.0",
     "pdf-lib": "^1.17.1",
