feat(demo): add demo seeding and development commands to package.json and update README
- Introduced new commands `demo:seed` and `demo:dev` in package.json for easier demo data setup and local development.
- Updated README to clarify the functionality of `demo:test` and provide instructions for using `demo:dev` to run the full development stack.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "spec:check": "node scripts/spec-compliance.mjs",
+    "demo:seed": "DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts",
+    "demo:dev": "pnpm demo:seed && DEMO_MODE=true pnpm dev",
     "demo:test": "DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts && pnpm --filter @club-ops/api exec vitest run tests/demo-seed.test.ts"
   },
   "devDependencies": {
