--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,7 +15,8 @@
       "import": "./dist/styles.js"
     },
     "./src/styles/tokens.css": "./src/styles/tokens.css",
-    "./src/styles/components.css": "./src/styles/components.css"
+    "./src/styles/components.css": "./src/styles/components.css",
+    "./src/styles/liquid-glass.css": "./src/styles/liquid-glass.css"
   },
   "scripts": {
     "build": "tsc",
