feat: add document verification endpoints and update demo functionality
- Introduced new endpoints for document verification, allowing staff to retrieve agreement PDFs and associated signatures by session ID.
- Enhanced the API to support downloading agreement PDFs directly.
- Updated the demo seed process to ensure accurate testing of document retrieval and verification.
- Improved README documentation to reflect new demo seeding options and usage instructions.
- Added a smoke test checklist for verifying check-in persistence and document availability.

--- a/services/api/env.example
+++ b/services/api/env.example
@@ -31,4 +31,5 @@ DB_LOG_QUERIES=false
 # Demo Mode
 # Set to 'true' to enable demo data seeding (shifts, timeclock sessions, documents)
 DEMO_MODE=false
+SEED_ON_STARTUP=false
 
