--- a/apps/cleaning-station-kiosk/tsconfig.json
+++ b/apps/cleaning-station-kiosk/tsconfig.json
@@ -7,5 +7,5 @@
   },
   "include": ["src"],
   "exclude": ["node_modules"],
-  "references": [{ "path": "../../packages/shared" }]
+  "references": [{ "path": "../../packages/shared" }, { "path": "../../packages/ui" }]
 }
