--- a/apps/employee-register/tsconfig.json
+++ b/apps/employee-register/tsconfig.json
@@ -9,5 +9,5 @@
   },
   "include": ["src"],
   "exclude": ["node_modules"],
-  "references": [{ "path": "../../packages/shared" }]
+  "references": [{ "path": "../../packages/shared" }, { "path": "../../packages/ui" }]
 }
