fix: update inventory SQL queries and clean up .gitignore
- Modified SQL queries in inventory routes to join with visits for better check-in block filtering.
- Removed outdated agreement PDF from .gitignore to ensure proper artifact management.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ Thumbs.db
 *.tsbuildinfo
 
 services/api/tests/_artifacts/agreement.generated.pdf
+services/api/tests/_artifacts/agreement.generated.pdf
