fix(shared): make ESM exports Node-compatible (.js extensions)

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,7 +12,9 @@
     }
   },
   "scripts": {
-    "build": "tsc",
+    "clean": "node -e \"require('fs').rmSync('dist', { recursive: true, force: true })\"",
+    "check:esm": "node ./scripts/check-esm.mjs",
+    "build": "tsc && pnpm check:esm",
     "dev": "tsc --watch",
     "pretest": "pnpm build",
     "test": "pnpm exec vitest run",
