--- a/apps/employee-register/package.json
+++ b/apps/employee-register/package.json
@@ -23,8 +23,12 @@
     "@testing-library/react": "^14.1.2",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "@tailwindcss/postcss": "^4.1.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "daisyui": "^5.5.14",
     "jsdom": "^23.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
     "vitest": "^1.1.0"
