feat: enhance check-in API with security and new language preference endpoint
- Added security requirements for existing check-in endpoints, enforcing kiosk token and bearer authentication.
- Introduced a new endpoint for setting customer primary language preference during the check-in process.
- Updated OpenAPI specification to reflect the new security measures and language preference functionality.
- Enhanced localization files to improve user experience with updated membership messaging in English and Spanish.
- Refactored AppRoot and related components to support the new language preference feature.
- Added tests to validate the new language preference functionality and security measures.

--- a/services/api/env.example
+++ b/services/api/env.example
@@ -33,3 +33,7 @@ DB_LOG_QUERIES=false
 DEMO_MODE=false
 SEED_ON_STARTUP=false
 
+# Kiosk Security
+# Shared kiosk token used for kiosk-facing, state-mutating endpoints (x-kiosk-token header).
+# This is a pragmatic LAN threat-model control. Configure the same token in the kiosk frontend (VITE_KIOSK_TOKEN).
+KIOSK_TOKEN=change-me
