refactor: streamline agent instructions and update API specifications
- Consolidated agent instructions into a more concise format, emphasizing critical requirements and project architecture.
- Updated OpenAPI specifications to include new endpoints for session management and agreement signing, enhancing clarity and security.
- Refactored room tier handling in shared utilities, replacing legacy terminology with standardized terms for consistency.
- Improved test coverage for customer kiosk and employee register components, ensuring robust functionality and user experience.
- Enhanced linting and type-checking scripts to exclude paused applications, optimizing development workflows.

--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "predev": "pnpm build:deps",
     "pretest": "pnpm build:deps",
     "prebuild": "pnpm build:deps",
+    "prelint": "pnpm build:deps",
     "dev": "pnpm kill-ports && concurrently -n api,kiosk,register,dashboard,cleaning,checkout -c blue,green,yellow,magenta,cyan,red \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\" \"pnpm --filter @club-ops/office-dashboard dev\" \"pnpm --filter @club-ops/cleaning-station-kiosk dev\" \"pnpm --filter @club-ops/checkout-kiosk dev\"",
     "dev:cloud": "concurrently -n api,kiosk,register,dashboard,cleaning,checkout -c blue,green,yellow,magenta,cyan,red \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\" \"pnpm --filter @club-ops/office-dashboard dev\" \"pnpm --filter @club-ops/cleaning-station-kiosk dev\" \"pnpm --filter @club-ops/checkout-kiosk dev\"",
     "dev-test": "pnpm kill-ports && concurrently -n api,kiosk,register -c blue,green,yellow \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\"",
     "build": "pnpm -r build",
-    "test": "pnpm kill-ports && pnpm -r test",
-    "lint": "pnpm -r lint",
+    "test": "pnpm kill-ports && pnpm -r --filter '!@club-ops/checkout-kiosk' --filter '!@club-ops/cleaning-station-kiosk' test",
+    "lint": "pnpm -r --filter '!@club-ops/checkout-kiosk' --filter '!@club-ops/cleaning-station-kiosk' lint",
     "doctor": "node scripts/doctor.cjs",
-    "typecheck": "pnpm -r typecheck",
+    "typecheck": "pnpm -r --filter '!@club-ops/checkout-kiosk' --filter '!@club-ops/cleaning-station-kiosk' typecheck",
     "pretypecheck": "pnpm build:deps",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
