--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "clean": "node -e \"require('fs').rmSync('dist', { recursive: true, force: true })\"",
     "check:esm": "node ./scripts/check-esm.mjs",
-    "build": "tsc && pnpm check:esm",
+    "build": "pnpm clean && pnpm exec tsc --build --force && pnpm check:esm",
     "dev": "tsc --watch",
     "pretest": "pnpm build",
     "test": "pnpm exec vitest run",
