feat: integrate lane session management and enhance WebSocket handling
- Introduced `useLaneSession` hook for managing lane sessions in both customer kiosk and employee register applications, improving real-time communication.
- Updated WebSocket handling across various components to utilize the new lane session management, ensuring consistent connection and message handling.
- Added error handling and connection management for WebSocket interactions, enhancing reliability and user experience.
- Refactored existing WebSocket implementations to streamline code and reduce redundancy, improving maintainability.
- Updated dependencies in `pnpm-lock.yaml` to include new versions of React and TypeScript types for better compatibility.

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,6 +9,14 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./realtime/laneSessionClient": {
+      "types": "./dist/realtime/laneSessionClient.d.ts",
+      "import": "./dist/realtime/laneSessionClient.js"
+    },
+    "./realtime/useLaneSession": {
+      "types": "./dist/realtime/useLaneSession.d.ts",
+      "import": "./dist/realtime/useLaneSession.js"
     }
   },
   "scripts": {
@@ -25,7 +33,12 @@
   "dependencies": {
     "zod": "^3.22.4"
   },
+  "peerDependencies": {
+    "react": "^18.0.0"
+  },
   "devDependencies": {
+    "@types/react": "^18.2.0",
+    "react": "^18.2.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   }
