--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -4,10 +4,11 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "verbatimModuleSyntax": true,
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "composite": true
   },
-  "include": ["src/**/*"],
+  "include": ["index.ts", "src/**/*", "realtime/**/*"],
   "exclude": ["node_modules", "dist", "tests"]
 }
