--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,5 +29,8 @@
   "devDependencies": {
     "@types/react": "^18.2.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@club-ops/shared": "workspace:*"
   }
 }
