--- a/services/api/package.json
+++ b/services/api/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "main": "./dist/index.js",
   "scripts": {
+    "predev": "pnpm --filter @club-ops/shared build",
     "dev": "node --import tsx --watch src/index.ts",
     "build": "tsc",
+    "prestart": "pnpm --filter @club-ops/shared build",
     "start": "node dist/index.js",
+    "pretest": "pnpm --filter @club-ops/shared build",
     "test": "pnpm db:migrate && pnpm exec vitest run",
     "test:watch": "pnpm exec vitest",
     "lint": "npx eslint src",
@@ -20,6 +23,7 @@
     "db:migrate:status": "node --import tsx src/db/migrate.ts status",
     "db:migrate:rollback": "node --import tsx src/db/migrate.ts rollback",
     "db:reset": "node scripts/compose.mjs reset",
+    "preseed": "pnpm --filter @club-ops/shared build",
     "seed": "pnpm db:wait && node --import tsx src/db/seed.ts",
     "update-staff": "node --import tsx scripts/update-staff-names.ts"
   },
