--- a/package.json
+++ b/package.json
@@ -11,29 +11,22 @@
     "db:reset": "pnpm --filter @club-ops/api db:reset",
     "db:migrate": "pnpm --filter @club-ops/api db:migrate",
     "db:seed": "pnpm --filter @club-ops/api seed",
-    "build:deps": "pnpm --filter @club-ops/shared build && pnpm --filter @club-ops/ui build",
-    "predev": "pnpm build:deps",
-    "pretest": "pnpm build:deps",
-    "prebuild": "pnpm build:deps",
-    "prelint": "pnpm build:deps",
-    "dev": "pnpm kill-ports && concurrently -n api,kiosk,register,dashboard,cleaning,checkout -c blue,green,yellow,magenta,cyan,red \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\" \"pnpm --filter @club-ops/office-dashboard dev\" \"pnpm --filter @club-ops/cleaning-station-kiosk dev\" \"pnpm --filter @club-ops/checkout-kiosk dev\"",
-    "dev:cloud": "concurrently -n api,kiosk,register,dashboard,cleaning,checkout -c blue,green,yellow,magenta,cyan,red \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\" \"pnpm --filter @club-ops/office-dashboard dev\" \"pnpm --filter @club-ops/cleaning-station-kiosk dev\" \"pnpm --filter @club-ops/checkout-kiosk dev\"",
-    "dev-test": "pnpm kill-ports && concurrently -n api,kiosk,register -c blue,green,yellow \"pnpm --filter @club-ops/api dev\" \"pnpm --filter @club-ops/customer-kiosk dev\" \"pnpm --filter @club-ops/employee-register dev\"",
-    "build": "pnpm -r build",
-    "test": "pnpm kill-ports && pnpm -r --workspace-concurrency=1 --filter '!@club-ops/checkout-kiosk' --filter '!@club-ops/cleaning-station-kiosk' test",
-    "lint": "pnpm -r --filter '!@club-ops/checkout-kiosk' --filter '!@club-ops/cleaning-station-kiosk' lint",
+    "dev": "pnpm kill-ports && turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard --filter=@club-ops/cleaning-station-kiosk --filter=@club-ops/checkout-kiosk",
+    "dev:cloud": "turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard --filter=@club-ops/cleaning-station-kiosk --filter=@club-ops/checkout-kiosk",
+    "dev-test": "pnpm kill-ports && turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register",
+    "build": "turbo run build",
+    "test": "pnpm kill-ports && turbo run test --filter=!@club-ops/checkout-kiosk --filter=!@club-ops/cleaning-station-kiosk",
+    "lint": "turbo run lint --filter=!@club-ops/checkout-kiosk --filter=!@club-ops/cleaning-station-kiosk",
     "doctor": "node scripts/doctor.cjs",
-    "typecheck": "pnpm -r --filter '!@club-ops/checkout-kiosk' --filter '!@club-ops/cleaning-station-kiosk' typecheck",
-    "pretypecheck": "pnpm build:deps",
+    "typecheck": "turbo run typecheck --filter=!@club-ops/checkout-kiosk --filter=!@club-ops/cleaning-station-kiosk",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "spec:check": "node scripts/spec-compliance.mjs",
-    "predemo:seed": "pnpm build:deps",
-    "demo:seed": "DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts",
+    "demo:seed": "turbo run build --filter=@club-ops/shared --filter=@club-ops/ui && DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts",
+    "demo": "node scripts/demo.mjs",
     "demo:dev": "pnpm demo:seed && DEMO_MODE=true pnpm dev",
     "demo:dev:seedOnBoot": "pnpm demo:seed && DEMO_MODE=true SEED_ON_STARTUP=true pnpm dev",
-    "predemo:test": "pnpm build:deps",
-    "demo:test": "DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts && DEMO_MODE=true pnpm --filter @club-ops/api exec vitest run tests/demo-seed.test.ts"
+    "demo:test": "turbo run build --filter=@club-ops/shared --filter=@club-ops/ui && DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts && DEMO_MODE=true pnpm --filter @club-ops/api exec vitest run tests/demo-seed.test.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -44,8 +37,8 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.11.0",
     "prettier": "^3.1.1",
-    "turbo": "^2.0.0",
     "tsx": "^4.6.2",
+    "turbo": "^2.7.5",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.0.0"
   },
