--- a/infra/docker/Dockerfile.dev
+++ b/infra/docker/Dockerfile.dev
@@ -5,7 +5,8 @@ RUN apt-get update \
     git ca-certificates curl bash python3 make g++ \
   && rm -rf /var/lib/apt/lists/*
 
-RUN corepack enable && corepack prepare pnpm@8.12.0 --activate
+# Align with the repo's configured pnpm version (see root package.json "packageManager")
+RUN corepack enable && corepack prepare pnpm@10.28.0 --activate
 
 WORKDIR /workspace
 
