--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,6 +14,10 @@
       "types": "./dist/styles.d.ts",
       "import": "./dist/styles.js"
     },
+    "./styles/index.css": "./src/styles/index.css",
+    "./styles/tokens.css": "./src/styles/tokens.css",
+    "./styles/components.css": "./src/styles/components.css",
+    "./styles/liquid-glass.css": "./src/styles/liquid-glass.css",
     "./src/styles/tokens.css": "./src/styles/tokens.css",
     "./src/styles/components.css": "./src/styles/components.css",
     "./src/styles/liquid-glass.css": "./src/styles/liquid-glass.css"
