API build Configuration for Production

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -2,28 +2,11 @@
   "name": "@club-ops/api",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "main": "./dist/index.js",
   "scripts": {
-    "dev": "node --import tsx --watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "test": "pnpm db:migrate && pnpm exec vitest run",
-    "test:watch": "pnpm exec vitest",
-    "lint": "npx eslint src",
-    "typecheck": "tsc --noEmit",
-    "db:start": "node scripts/compose.mjs up -d",
-    "db:wait": "node --import tsx scripts/wait-for-db.ts",
-    "db:stop": "node scripts/compose.mjs down",
-    "db:setup": "node --import tsx scripts/setup-db.ts || powershell -ExecutionPolicy Bypass -File scripts/setup-db.ps1",
-    "db:migrate": "pnpm db:wait && node --import tsx src/db/migrate.ts",
-    "db:migrate:status": "node --import tsx src/db/migrate.ts status",
-    "db:migrate:rollback": "node --import tsx src/db/migrate.ts rollback",
-    "db:reset": "node scripts/compose.mjs reset",
-    "preseed": "pnpm --filter @club-ops/shared build",
-    "seed": "pnpm db:wait && node --import tsx src/db/seed.ts",
-    "seed:demo": "pnpm db:wait && node --import tsx src/db/seed-demo.ts",
-    "update-staff": "node --import tsx scripts/update-staff-names.ts"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@club-ops/shared": "workspace:*",
