--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,32 +5,6 @@ on:
     branches: [main]
   push:
     branches: [main]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: pnpm
-
-      - run: pnpm install
-      - run: pnpm turbo run build
-      - run: pnpm turbo run typecheck
-name: CI
-
-on:
-  pull_request:
-  push:
-    branches: [main]
   workflow_dispatch:
 
 concurrency:
@@ -38,36 +12,30 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  ci:
+  validate:
+    name: Validate build & types
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: "9"
+          version: 9
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
-      - name: Lint (if present)
-        run: pnpm -r run lint --if-present
+      - name: Build (Turbo)
+        run: pnpm turbo run build
 
-      - name: Typecheck (if present)
-        run: pnpm -r run typecheck --if-present
-
-      - name: Test (if present)
-        run: pnpm -r run test --if-present
-
-      - name: Build (if present)
-        run: pnpm -r run build --if-present
-
+      - name: Typecheck (Turbo)
+        run: pnpm turbo run typecheck
