Updated URLs for deployment

--- a/apps/employee-register/tsconfig.json
+++ b/apps/employee-register/tsconfig.json
@@ -5,6 +5,10 @@
     "jsx": "react-jsx",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "noEmit": true
   },
   "include": ["src"],
