--- a/apps/office-dashboard/tsconfig.json
+++ b/apps/office-dashboard/tsconfig.json
@@ -3,6 +3,10 @@
   "compilerOptions": {
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "noEmit": true
   },
   "include": ["src"],
