Monorepo API and DB updates

--- a/services/api/env.example
+++ b/services/api/env.example
@@ -3,6 +3,10 @@ PORT=3001
 HOST=0.0.0.0
 
 # Database Configuration
+# Hosted deployments (e.g., Render) typically provide DATABASE_URL automatically.
+# If set, DATABASE_URL is supported and recommended over individual DB_* settings.
+# Example:
+# DATABASE_URL=postgres://user:pass@host:5432/dbname?sslmode=require
 DB_HOST=localhost
 DB_PORT=5433
 DB_NAME=club_operations
