Added environment variables for kiosk token and API base URL in turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,9 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "env": [
+    "VITE_KIOSK_TOKEN",
+    "VITE_API_BASE_URL"
+  ],
   "globalDependencies": [
     "tsconfig.base.json",
     "tsconfig.json",
