Add telemetry enhancements across applications
- Introduced telemetry reporting features in Customer Kiosk and Employee Register, including a new ReportIssueButton component for user feedback.
- Updated telemetry installation to support additional configurations such as breadcrumb management and incident tracking.
- Enhanced TelemetryView in Office Dashboard to display telemetry traces and spans, improving incident reconstruction capabilities.
- Implemented backend telemetry ingestion with new database tables for telemetry traces and spans, ensuring robust data capture.
- Added redaction and sanitization mechanisms for sensitive data in telemetry requests and responses.
- Updated API routes to support telemetry data retrieval and management, enhancing overall telemetry functionality.

--- a/apps/customer-kiosk/env.example
+++ b/apps/customer-kiosk/env.example
@@ -13,3 +13,4 @@ VITE_API_BASE_URL=https://your-api.onrender.com
 # Shared kiosk token used for kiosk-facing API + WS auth (matches API's KIOSK_TOKEN)
 VITE_KIOSK_TOKEN=your-shared-kiosk-token
 
+VITE_TELEMETRY_REPORT_FLUSH_BREADCRUMBS_ON_INFO=false
