--- a/apps/employee-register/env.example
+++ b/apps/employee-register/env.example
@@ -13,3 +13,4 @@ VITE_API_BASE_URL=https://your-api.onrender.com
 # Shared kiosk token used for kiosk-facing API + WS auth (matches API's KIOSK_TOKEN)
 VITE_KIOSK_TOKEN=your-shared-kiosk-token
 
+VITE_TELEMETRY_REPORT_FLUSH_BREADCRUMBS_ON_INFO=false
