Remove deprecated checkout-kiosk and cleaning-station-kiosk applications
- Deleted all files related to the checkout-kiosk and cleaning-station-kiosk applications, which are now paused and should not be modified.
- Updated contributing guidelines and documentation to reflect the removal of these applications.
- Adjusted package.json scripts and lock files to remove references to the deleted applications.

--- a/infra/docker/Dockerfile.dev
+++ b/infra/docker/Dockerfile.dev
@@ -20,7 +20,7 @@ RUN pnpm install --frozen-lockfile
 
 COPY . .
 
-EXPOSE 3001 5173 5174 5175 5176 5177
+EXPOSE 3001 5173 5175 5176
 
 CMD ["bash"]
 
