--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "db:reset": "pnpm --filter @club-ops/api db:reset",
     "db:migrate": "pnpm --filter @club-ops/api db:migrate",
     "db:seed": "pnpm --filter @club-ops/api seed",
-    "dev": "pnpm kill-ports && turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard --filter=@club-ops/cleaning-station-kiosk --filter=@club-ops/checkout-kiosk",
-    "dev:cloud": "turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard --filter=@club-ops/cleaning-station-kiosk --filter=@club-ops/checkout-kiosk",
+    "dev": "pnpm kill-ports && turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard",
+    "dev:cloud": "turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard",
     "dev-test": "pnpm kill-ports && turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register",
     "build": "turbo run build",
-    "test": "pnpm kill-ports && turbo run test --filter=!@club-ops/checkout-kiosk --filter=!@club-ops/cleaning-station-kiosk",
-    "lint": "turbo run lint --filter=!@club-ops/checkout-kiosk --filter=!@club-ops/cleaning-station-kiosk",
+    "test": "pnpm kill-ports && turbo run test",
+    "lint": "turbo run lint",
     "doctor": "node scripts/doctor.cjs",
-    "typecheck": "turbo run typecheck --filter=!@club-ops/checkout-kiosk --filter=!@club-ops/cleaning-station-kiosk",
+    "typecheck": "turbo run typecheck",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "spec:check": "node scripts/spec-compliance.mjs",
