--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "demo": "node scripts/demo.mjs",
     "demo:dev": "pnpm demo:seed && DEMO_MODE=true pnpm dev",
     "demo:dev:seedOnBoot": "pnpm demo:seed && DEMO_MODE=true SEED_ON_STARTUP=true pnpm dev",
+    "start": "pnpm demo:seed && DEMO_MODE=true turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard",
     "demo:test": "turbo run build --filter=@club-ops/shared --filter=@club-ops/ui && DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts && DEMO_MODE=true pnpm --filter @club-ops/api exec vitest run tests/demo-seed.test.ts",
     "telemetry:export": "node tools/telemetry/export-telemetry.mjs"
   },
