--- a/services/api/package.json
+++ b/services/api/package.json
@@ -5,8 +5,15 @@
   "type": "commonjs",
   "main": "./dist/index.js",
   "scripts": {
+    "dev": "pnpm exec tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "db:start": "node scripts/compose.mjs up -d",
+    "db:stop": "node scripts/compose.mjs down",
+    "db:reset": "node scripts/compose.mjs reset && pnpm exec tsx scripts/wait-for-db.ts",
+    "db:migrate": "pnpm exec tsx scripts/wait-for-db.ts && pnpm exec tsx src/db/migrate.ts",
+    "db:migrate:status": "pnpm exec tsx scripts/wait-for-db.ts && pnpm exec tsx src/db/migrate-status.ts",
+    "seed": "pnpm exec tsx scripts/wait-for-db.ts && pnpm exec tsx src/db/seed.ts"
   },
   "dependencies": {
     "@club-ops/shared": "workspace:*",
