--- a/services/api/package.json
+++ b/services/api/package.json
@@ -28,6 +28,7 @@
     "pdf-lib": "^1.17.1",
     "pg": "^8.11.3",
     "pino-pretty": "^10.3.0",
+    "square": "^36.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
