--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -46,7 +46,11 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install
-        run: pnpm -w install --frozen-lockfile
+        run: pnpm install --frozen-lockfile --prod=false
+        env:
+          NODE_ENV: development
+          NPM_CONFIG_PRODUCTION: "false"
+          PNPM_PRODUCTION: "false"
 
       - name: Lint
         run: pnpm -w lint
