--- a/services/api/env.example
+++ b/services/api/env.example
@@ -11,7 +11,7 @@ DB_HOST=localhost
 DB_PORT=5433
 DB_NAME=club_operations
 DB_USER=clubops
-DB_PASSWORD=clubops_dev
+DB_PASSWORD="$PASSWORD"
 DB_SSL=false
 DB_POOL_MAX=20
 
