--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -1,11 +1,10 @@
 FROM node:22-alpine AS build
 WORKDIR /repo
-
 RUN corepack enable
 
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY services/api ./services/api
 COPY packages ./packages
+COPY services/api ./services/api
 
 RUN pnpm install --frozen-lockfile
 RUN pnpm -C services/api build
@@ -16,12 +15,17 @@ ENV NODE_ENV=production
 RUN corepack enable
 
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY services/api ./services/api
 COPY packages ./packages
+COPY services/api/package.json ./services/api/package.json
 
+# Install production deps for the workspace + api
 RUN pnpm install --prod --frozen-lockfile
+
+# Copy only built output + runtime assets
+COPY --from=build /repo/services/api/dist ./services/api/dist
+COPY --from=build /repo/services/api/migrations ./services/api/migrations
 
 ENV PORT=3000
 EXPOSE 3000
-
 CMD ["pnpm", "-C", "services/api", "start"]
+    
