Add dev deploy workflow and dockerignore

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Build (Turbo)
         run: pnpm turbo run build
         env:
-          VITE_KIOSK_TOKEN: ${{ secrets.VITE_KIOSK_TOKEN }}
-          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
+          VITE_KIOSK_TOKEN: ${{ github.event_name == 'pull_request' && 'ci-dummy-kiosk-token' || secrets.VITE_KIOSK_TOKEN }}
+          VITE_API_BASE_URL: ${{ github.event_name == 'pull_request' && 'https://api-demo.joshuakessell.com' || secrets.VITE_API_BASE_URL }}
 
       - name: Typecheck (Turbo)
         run: pnpm turbo run typecheck
